Fixed the overflow issue with the blog form

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,8 @@
 .card-form {
   max-width: 800px;
   width: 100%;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 @media screen and (min-width: 576px) {
